les blocs sans erreurs
